fix: Correct card alignment

--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -5,7 +5,8 @@
 .projectCards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     padding: 0 30px;
 }
 
@@ -16,9 +17,9 @@
     border: 1px solid #333333;
     display: flex;
     flex-direction: column;
-    padding: 0 15px;
-    margin-top: 20px;
     justify-content: space-evenly;
+    padding: 0 15px;
+    margin: 20px 13px 0 13px;
 }
 
 .card:hover {
